# modelmess

./: README.md  pyproject.toml
modelmess/src/: cv_map.py  datamodel.py  dspy_refine.py  helpers.py  resolve.py  rules_0000.py  vocab.py
sdrf_pipeline/: README.md  env.yaml  main.py  main_fill.py  pyproject.toml  requirements.txt
sdrf_pipeline/src/: build_canonical.py  cv_map.py  eval.py  fields.py  llm_fillgaps.py  models.py  pipeline.py  postprocessing.py  prompts.py  rules_0000.py
src/: README.md  README_0000.md  crequirements.txt  fields.py  llm_fillgaps.py  main_fill.py  models.py  pipeline.py  postprocessing.py  prompts.py  rules_0000.py
