[project]
name = "kaggle_sdrfmess"
version = "0.1.0"
description = "SDRF Extraction Pipeline Rules first then LLM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.13",
    "langchain-core>=1.2.22",
    "langchain-openai>=1.1.12",
    "openai>=1.40.0",
    "pydantic>=2.0.0",
    "scikit-learn>=1.8.0",
    "sdrf-pipelines[all]>=0.1.2",
]
[tool.setuptools]
packages = ["modelmess", "sdrf_pipeline"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"